@@ -6,6 +6,9 @@
 	* src/SDCClospre.cc,
 	  support/regression/tests/bug-2820.c:
 	  Fix bug #2820.
+	* src/SDCCicode.c,
+	  support/regression/tests/bug-2805.c:
+	  Fix bug #2805.
 
 2018-10-09 Philipp Klaus Krause <pkk AT spth.de>
 
